[gd_scene load_steps=4 format=3 uid="uid://dfm1hhhoeaqgt"]

[ext_resource type="Script" uid="uid://cfgyr3bwodfgv" path="res://intermission.gd" id="1_kpofo"]
[ext_resource type="Texture2D" uid="uid://dlp2au005x5eg" path="res://AnimalSprites/Bird/bird_0004_Layer-1.png" id="2_h1yqe"]
[ext_resource type="Texture2D" uid="uid://diikm0fpfr8bl" path="res://AnimalSprites/Cat/PurePNGCat_0004_Layer-1.png" id="3_753xy"]

[node name="Intermission" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kpofo")

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_left = 759.0
offset_top = 520.0
offset_right = 928.0
offset_bottom = 551.0
text = "SKIP!
"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Choice1" type="Button" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 368.0
offset_right = 525.0
offset_bottom = 494.0
icon = ExtResource("2_h1yqe")
flat = true

[node name="Choice2" type="Button" parent="."]
offset_left = 640.0
offset_top = 368.0
offset_right = 776.0
offset_bottom = 504.0
icon = ExtResource("3_753xy")

[node name="Head" type="Button" parent="."]
offset_left = 80.0
offset_top = 64.0
offset_right = 216.0
offset_bottom = 200.0
icon = ExtResource("3_753xy")

[node name="Label" type="Label" parent="Head"]
layout_mode = 0
offset_left = 40.0
offset_top = 144.0
offset_right = 84.0
offset_bottom = 167.0
text = "HEAD"

[node name="Body" type="Button" parent="."]
offset_left = 256.0
offset_top = 64.0
offset_right = 392.0
offset_bottom = 200.0
icon = ExtResource("3_753xy")

[node name="Label" type="Label" parent="Body"]
offset_left = 40.0
offset_top = 144.0
offset_right = 102.0
offset_bottom = 193.0
text = "Body"
horizontal_alignment = 1

[node name="BLeg" type="Button" parent="."]
offset_left = 632.0
offset_top = 64.0
offset_right = 768.0
offset_bottom = 200.0
icon = ExtResource("3_753xy")

[node name="Label" type="Label" parent="BLeg"]
offset_left = 40.0
offset_top = 144.0
offset_right = 84.0
offset_bottom = 167.0
text = "Back Legs"

[node name="FLeg" type="Button" parent="."]
offset_left = 448.0
offset_top = 64.0
offset_right = 584.0
offset_bottom = 200.0
icon = ExtResource("3_753xy")

[node name="Label" type="Label" parent="FLeg"]
offset_left = 40.0
offset_top = 144.0
offset_right = 121.0
offset_bottom = 167.0
text = "Front Legs"
horizontal_alignment = 1

[node name="Tail" type="Button" parent="."]
offset_left = 832.0
offset_top = 64.0
offset_right = 968.0
offset_bottom = 200.0
icon = ExtResource("3_753xy")

[node name="Label" type="Label" parent="Tail"]
offset_left = 40.0
offset_top = 144.0
offset_right = 84.0
offset_bottom = 167.0
text = "Tail"

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="Choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="Head" to="." method="_on_head_pressed"]
[connection signal="pressed" from="Body" to="." method="_on_body_pressed"]
[connection signal="pressed" from="BLeg" to="." method="_on_b_leg_pressed"]
[connection signal="pressed" from="FLeg" to="." method="_on_f_leg_pressed"]
[connection signal="pressed" from="Tail" to="." method="_on_tail_pressed"]
